--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html>
 <head>
-
+    <title>Lab 03 - Body Calculator</title>
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
+    <meta charset="utf-8">
 </head>
 
 <body>
 
 <div id="calc">
+
+
 
     <p class="headerText"> BODY CALCULATOR </p>
 
@@ -17,7 +21,9 @@
 
     <label></label><textarea id="output"></textarea>
 
+
 </div>
 
+    <script src="js/bsa_calc.js"></script>
 </body>
 </html>
